# mehustin

./: .gitignore  .gitmodules  .syntastic_c_config  Makefile  README.md  build_dual.sh  build_windows.sh  common.mk  config.mk  demo.c  demo.h  demo.sh  executable.mk  fbo.c  fbo.h  gl_matrix.c  gl_matrix.h  gl_util.c  gl_util.h  kernel.py  main.c  mesh.c  mesh.h  meson.build  module.mk  monolithic.mk  obj.c  obj.h  player.c  player.h  post.frag  procedural_texture.c  procedural_texture.h  quad.c  quad.h  read_file.c  read_file.h  readme.md  scene.c  scene.h  (+3 more)
shaders/: bloom.frag  bloom_pre.frag  bloomx.frag  bloomy.frag  point.vert  post.frag  shader.frag  shader.vert  text.frag  text.vert
src/: api.h  demo.sh  run.bat
src/base/: demo.c  demo.h  demo_procs.c  demo_procs.h  fbo.c  fbo.h  gl_util.c  gl_util.h  main.c  mesh.c  mesh.h  meson.build  obj.c  obj.h  player.c  player.h  procedural_texture.c  procedural_texture.h  quad.c  quad.h  read_file.c  sync_io.c  sync_io.h  vec.c  vec.h
src/scene/: gl.h  meson.build  obj.c  obj.h  particles.c  particles.h  post.c  post.h  primitives.c  primitives.h  read_file.c  read_file.h  resources.c  resources.h  scene.c  scene.h  screen_pass.c  screen_pass.h  text.c  text.h  vec.c  vec.h
